basic structure and functionality

--- a/style.sass
+++ b/style.sass
@@ -1,2 +1,38 @@
 body
 	background: white
+	
+#container
+	margin: auto
+	width: 800px
+
+#prompt
+	font-size: 60px
+	font-family: 'Montserrat', sans-serif
+	letter-spacing: -5px
+	text-align: center
+	
+
+#control-surface
+	width: 600px
+	margin: auto
+	height: 200px
+	border: 1px solid red
+	overflow: hidden
+	position: relative
+	
+#slide-holder
+	height: 200px
+	width: 2400px
+	position: absolute
+	top: 0px
+	left: 0px
+	.slide
+		width: 600px
+		float: left
+		height: 200px
+
+#thedoing
+	font-size: 40px
+
+#time-muncher
+	font-size: 60px
