--- a/style.css
+++ b/style.css
@@ -1,15 +1,50 @@
-body {
-  background: white; }
+html {
+  margin: 0;
+  padding: 0; }
 
-#container {
+body {
+  background: white;
+  margin: 0;
+  padding: 0; }
+
+#header {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 20px;
+  z-index: 10;
+  background-color: pink;
+  border-bottom: 2px solid black; }
+
+#above-the-fold {
   margin: auto;
-  width: 800px; }
+  width: 800px;
+  height: 1000px;
+  overflow: hidden;
+  position: relative; }
+
+#below-the-fold {
+  margin: auto;
+  width: 100%;
+  background-color: pink;
+  border-top: 5px solid black;
+  height: 500px; }
+
+#fold-hold {
+  border: 1px solid blue; }
+
+#task-list {
+  margin: auto;
+  text-align: center; }
 
 #prompt {
   font-size: 60px;
   font-family: "Montserrat", sans-serif;
   letter-spacing: -5px;
-  text-align: center; }
+  text-align: center;
+  margin-top: 100px;
+  text-transform: lowercase; }
 
 #control-surface {
   width: 600px;
@@ -28,10 +63,12 @@ body {
   #slide-holder .slide {
     width: 600px;
     float: left;
-    height: 200px; }
+    height: 200px;
+    text-align: center; }
 
 #thedoing {
-  font-size: 40px; }
+  font-size: 40px;
+  text-transform: lowercase; }
 
 #time-muncher {
   font-size: 60px; }
