--- a/style.sass
+++ b/style.sass
@@ -1,15 +1,51 @@
+html
+	margin: 0
+	padding: 0
+
 body
 	background: white
+	margin: 0
+	padding: 0
 	
-#container
+#header
+	position: fixed
+	top: 0px
+	left: 0px
+	width: 100%
+	height: 20px
+	z-index: 10
+	background-color: pink
+	border-bottom: 2px solid black
+	
+#above-the-fold
 	margin: auto
 	width: 800px
+	height: 1000px
+	overflow: hidden
+	position: relative
+	
+#below-the-fold
+	margin: auto
+	width: 100%
+	background-color: pink
+	border-top: 5px solid black
+	height: 500px
+	
+#fold-hold
+	border: 1px solid blue
+	
+#task-list
+	margin: auto
+	text-align: center
+	
 
 #prompt
 	font-size: 60px
 	font-family: 'Montserrat', sans-serif
 	letter-spacing: -5px
 	text-align: center
+	margin-top: 100px
+	text-transform: lowercase
 	
 
 #control-surface
@@ -30,9 +66,11 @@ body
 		width: 600px
 		float: left
 		height: 200px
+		text-align: center
 
 #thedoing
 	font-size: 40px
+	text-transform: lowercase
 
 #time-muncher
 	font-size: 60px
