--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,7 +6,7 @@ html
 	padding: 0
 
 body
-	background: white
+	
 	margin: 0
 	padding: 0
 	
@@ -48,6 +48,7 @@ body
 	letter-spacing: -5px
 	text-align: center
 	margin-top: 100px
+	margin-bottom: 30px
 	text-transform: lowercase
 	
 
