--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ body {
 /* line 24, ../sass/style.sass */
 #above-the-fold {
   margin: auto;
-  width: 800px;
+  width: 700px;
   height: 1000px;
   overflow: hidden;
   position: relative;
@@ -142,7 +142,7 @@ body {
 
 /* line 62, ../sass/style.sass */
 #control-surface {
-  width: 600px;
+  width: 700px;
   margin: auto;
   height: 300px;
   overflow: hidden;
@@ -152,14 +152,14 @@ body {
 /* line 69, ../sass/style.sass */
 #slide-holder {
   height: 300px;
-  width: 2400px;
+  width: 2800px;
   position: absolute;
   top: 0px;
   left: 0px;
 }
 /* line 75, ../sass/style.sass */
 #slide-holder .slide {
-  width: 600px;
+  width: 700px;
   float: left;
   height: 300px;
   text-align: center;
@@ -232,8 +232,29 @@ h3 {
   text-transform: uppercase;
 }
 
-/* line 118, ../sass/style.sass */
-span.logo {
+/* line 117, ../sass/style.sass */
+h4 {
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 1px;
+  color: #333333;
+  text-align: left;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-transform: uppercase;
+}
+
+/* line 127, ../sass/style.sass */
+h5 {
+  font-family: Georgia, sans-serif;
+  font-style: normal;
+  font-size: 20px;
+  text-align: left;
+  margin-top: 10px;
+}
+
+/* line 135, ../sass/style.sass */
+#logo {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
   letter-spacing: 2px;
@@ -243,14 +264,62 @@ span.logo {
   margin-left: 10px;
   text-transform: uppercase;
   text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
+  float: left;
 }
 
-/* line 129, ../sass/style.sass */
+/* line 147, ../sass/style.sass */
+#welcome {
+  float: right;
+  font-family: Georgia, serif;
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
+  font-size: 10px;
+  font-style: italic;
+  font-weight: bold;
+  line-height: 30px;
+  margin-right: 15px;
+}
+
+/* line 158, ../sass/style.sass */
 .clear {
   clear: both;
 }
 
-/* line 133, ../sass/style.sass */
+/* line 162, ../sass/style.sass */
+#time-stats {
+  float: left;
+  width: 360px;
+  margin-right: 60px;
+}
+
+/* line 167, ../sass/style.sass */
+#elapsed-time {
+  font-family: Georgia, serif;
+  font-size: 140px;
+  text-align: left;
+  text-shadow: rgba(255, 255, 255, 0.8) 0 1px 0px;
+  margin-bottom: 50px;
+}
+
+/* line 174, ../sass/style.sass */
+#midtask-options {
+  float: right;
+  width: 235px;
+}
+
+/* line 178, ../sass/style.sass */
+#time-stats-left {
+  float: left;
+  width: 140px;
+}
+
+/* line 182, ../sass/style.sass */
+#time-stats-right {
+  float: right;
+  width: 140px;
+}
+
+/* line 187, ../sass/style.sass */
 button {
   display: inline-block;
   margin: 0 2px;
@@ -273,18 +342,18 @@ button {
   box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px;
 }
 
-/* line 147, ../sass/style.sass */
+/* line 201, ../sass/style.sass */
 button:hover, input[type="submit"].button:hover {
   text-decoration: none;
 }
 
-/* line 150, ../sass/style.sass */
+/* line 204, ../sass/style.sass */
 button:active, input[type="submit"].button:active {
   position: relative;
   top: 1px;
 }
 
-/* line 154, ../sass/style.sass */
+/* line 208, ../sass/style.sass */
 .set-time-button {
   font-size: 25px;
   font-weight: bold;
@@ -319,7 +388,7 @@ button:active, input[type="submit"].button:active {
   width: 120px;
 }
 
-/* line 165, ../sass/style.sass */
+/* line 219, ../sass/style.sass */
 #minutes {
   position: absolute;
   left: 50%;
@@ -329,7 +398,7 @@ button:active, input[type="submit"].button:active {
   z-index: 4;
 }
 
-/* line 173, ../sass/style.sass */
+/* line 227, ../sass/style.sass */
 #time-muncher {
   font-size: 80px;
   -moz-border-radius: 150px;
@@ -351,7 +420,7 @@ button:active, input[type="submit"].button:active {
   z-index: 3;
 }
 
-/* line 188, ../sass/style.sass */
+/* line 242, ../sass/style.sass */
 .time-minus-button {
   font-size: 25px;
   font-weight: bold;
@@ -389,7 +458,7 @@ button:active, input[type="submit"].button:active {
   z-index: 2;
 }
 
-/* line 202, ../sass/style.sass */
+/* line 256, ../sass/style.sass */
 .time-plus-button {
   font-size: 25px;
   font-weight: bold;
@@ -427,7 +496,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 216, ../sass/style.sass */
+/* line 270, ../sass/style.sass */
 .set-name-button {
   font-size: 15px;
   font-weight: bold;
@@ -438,7 +507,24 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 225, ../sass/style.sass */
+/* line 279, ../sass/style.sass */
+.midtask {
+  width: 230px;
+  margin: 15px auto;
+  font-size: 24px;
+  line-height: 31px;
+}
+
+/* line 285, ../sass/style.sass */
+.logout {
+  font-size: 8px;
+  text-transform: uppercase;
+  padding: 0.25em;
+  margin-top: 5px;
+  margin-left: 3px;
+}
+
+/* line 293, ../sass/style.sass */
 .white {
   color: #333333;
   text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0px;
@@ -451,7 +537,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ffffff, #dddddd);
 }
 
-/* line 231, ../sass/style.sass */
+/* line 299, ../sass/style.sass */
 .white:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ededed), color-stop(100%, #ededed));
   background-image: -webkit-linear-gradient(#ededed, #ededed);
@@ -461,7 +547,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ededed, #ededed);
 }
 
-/* line 234, ../sass/style.sass */
+/* line 302, ../sass/style.sass */
 .white:active {
   color: #999999;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dddddd), color-stop(100%, #ffffff));
