--- a/sass/style.sass
+++ b/sass/style.sass
@@ -164,7 +164,7 @@ h5
 	width: 360px
 	margin-right: 60px
 
-#elapsed-time
+#time-remaining
 	font-family: Georgia, serif
 	font-size: 140px
 	text-align: left
