--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ body {
 /* line 109, ../sass/style.sass */
 ul#history-list li {
   list-style: none;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Georgia, serif;
   font-size: 14px;
   line-height: 24px;
   text-align: center;
@@ -236,15 +236,16 @@ ul#history-list li .history-time {
   line-height: 24px;
   margin-right: 15px;
   color: #cccccc;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-/* line 121, ../sass/style.sass */
+/* line 122, ../sass/style.sass */
 .time {
   font-family: Georgia, serif;
   font-weight: normal;
 }
 
-/* line 125, ../sass/style.sass */
+/* line 126, ../sass/style.sass */
 h2 {
   font-family: Georgia, sans-serif;
   font-style: italic;
@@ -252,7 +253,7 @@ h2 {
   margin-bottom: 20px;
 }
 
-/* line 131, ../sass/style.sass */
+/* line 132, ../sass/style.sass */
 h3 {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
@@ -264,7 +265,7 @@ h3 {
   text-transform: uppercase;
 }
 
-/* line 141, ../sass/style.sass */
+/* line 142, ../sass/style.sass */
 h4 {
   font-size: 12px;
   font-family: "Montserrat", sans-serif;
@@ -276,7 +277,7 @@ h4 {
   text-transform: uppercase;
 }
 
-/* line 151, ../sass/style.sass */
+/* line 152, ../sass/style.sass */
 h5 {
   font-family: Georgia, sans-serif;
   font-style: normal;
@@ -285,7 +286,7 @@ h5 {
   margin-top: 10px;
 }
 
-/* line 158, ../sass/style.sass */
+/* line 159, ../sass/style.sass */
 h6 {
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
@@ -298,7 +299,7 @@ h6 {
   margin-bottom: 10px;
 }
 
-/* line 169, ../sass/style.sass */
+/* line 170, ../sass/style.sass */
 #logo {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
@@ -312,7 +313,7 @@ h6 {
   float: left;
 }
 
-/* line 181, ../sass/style.sass */
+/* line 182, ../sass/style.sass */
 #welcome {
   float: right;
   font-family: Georgia, serif;
@@ -325,19 +326,19 @@ h6 {
   margin-right: 15px;
 }
 
-/* line 192, ../sass/style.sass */
+/* line 193, ../sass/style.sass */
 .clear {
   clear: both;
 }
 
-/* line 196, ../sass/style.sass */
+/* line 197, ../sass/style.sass */
 #time-stats {
   float: left;
   width: 360px;
   margin-right: 60px;
 }
 
-/* line 201, ../sass/style.sass */
+/* line 202, ../sass/style.sass */
 #time-remaining {
   font-family: Georgia, serif;
   font-size: 140px;
@@ -346,25 +347,25 @@ h6 {
   margin-bottom: 50px;
 }
 
-/* line 208, ../sass/style.sass */
+/* line 209, ../sass/style.sass */
 #midtask-options {
   float: right;
   width: 235px;
 }
 
-/* line 212, ../sass/style.sass */
+/* line 213, ../sass/style.sass */
 #time-stats-left {
   float: left;
   width: 140px;
 }
 
-/* line 216, ../sass/style.sass */
+/* line 217, ../sass/style.sass */
 #time-stats-right {
   float: right;
   width: 140px;
 }
 
-/* line 221, ../sass/style.sass */
+/* line 222, ../sass/style.sass */
 button {
   display: inline-block;
   margin: 0 2px;
@@ -387,23 +388,23 @@ button {
   box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px;
 }
 
-/* line 235, ../sass/style.sass */
+/* line 236, ../sass/style.sass */
 button:hover, input[type="submit"].button:hover {
   text-decoration: none;
 }
 
-/* line 238, ../sass/style.sass */
+/* line 239, ../sass/style.sass */
 button:active, input[type="submit"].button:active {
   position: relative;
   top: 1px;
 }
 
-/* line 242, ../sass/style.sass */
+/* line 243, ../sass/style.sass */
 .small {
   font-size: 12px;
 }
 
-/* line 245, ../sass/style.sass */
+/* line 246, ../sass/style.sass */
 .set-time-button {
   font-size: 25px;
   font-weight: bold;
@@ -438,7 +439,7 @@ button:active, input[type="submit"].button:active {
   width: 120px;
 }
 
-/* line 256, ../sass/style.sass */
+/* line 257, ../sass/style.sass */
 #minutes {
   position: absolute;
   left: 50%;
@@ -448,7 +449,7 @@ button:active, input[type="submit"].button:active {
   z-index: 4;
 }
 
-/* line 264, ../sass/style.sass */
+/* line 265, ../sass/style.sass */
 #time-muncher {
   font-size: 80px;
   -moz-border-radius: 150px;
@@ -470,7 +471,7 @@ button:active, input[type="submit"].button:active {
   z-index: 3;
 }
 
-/* line 279, ../sass/style.sass */
+/* line 280, ../sass/style.sass */
 .time-minus-button {
   font-size: 25px;
   font-weight: bold;
@@ -508,7 +509,7 @@ button:active, input[type="submit"].button:active {
   z-index: 2;
 }
 
-/* line 293, ../sass/style.sass */
+/* line 294, ../sass/style.sass */
 .time-plus-button {
   font-size: 25px;
   font-weight: bold;
@@ -546,7 +547,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 307, ../sass/style.sass */
+/* line 308, ../sass/style.sass */
 .set-name-button {
   font-weight: bold;
   position: absolute;
@@ -557,7 +558,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 316, ../sass/style.sass */
+/* line 317, ../sass/style.sass */
 .midtask {
   width: 230px;
   margin: 15px auto;
@@ -565,7 +566,7 @@ button:active, input[type="submit"].button:active {
   line-height: 31px;
 }
 
-/* line 322, ../sass/style.sass */
+/* line 323, ../sass/style.sass */
 .logout {
   font-size: 8px;
   text-transform: uppercase;
@@ -574,7 +575,7 @@ button:active, input[type="submit"].button:active {
   margin-left: 3px;
 }
 
-/* line 330, ../sass/style.sass */
+/* line 331, ../sass/style.sass */
 .white {
   color: #333333;
   text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0px;
@@ -587,7 +588,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ffffff, #dddddd);
 }
 
-/* line 336, ../sass/style.sass */
+/* line 337, ../sass/style.sass */
 .white:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ededed), color-stop(100%, #ededed));
   background-image: -webkit-linear-gradient(#ededed, #ededed);
@@ -597,7 +598,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ededed, #ededed);
 }
 
-/* line 339, ../sass/style.sass */
+/* line 340, ../sass/style.sass */
 .white:active {
   color: #999999;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dddddd), color-stop(100%, #ffffff));
