--- a/sass/style.sass
+++ b/sass/style.sass
@@ -108,7 +108,7 @@ body
 
 ul#history-list li
 	list-style: none
-	font-family: Helvetica, Arial, sans-serif
+	font-family: Georgia, serif
 	font-size: 14px
 	line-height: 24px
 	text-align: center
@@ -117,6 +117,7 @@ ul#history-list li
 		line-height: 24px
 		margin-right: 15px
 		color: #ccc
+		font-family: Helvetica, Arial, sans-serif
 
 .time
 	font-family: Georgia, serif
