--- a/sass/style.sass
+++ b/sass/style.sass
@@ -112,7 +112,7 @@ ul#history-list li
 	font-size: 14px
 	line-height: 24px
 	text-align: center
-	.history-time
+	.history-date
 		font-size: 10px
 		line-height: 24px
 		margin-right: 15px
