--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,11 @@ body {
 }
 
 /* line 14, ../sass/style.sass */
+input {
+  outline: none;
+}
+
+/* line 17, ../sass/style.sass */
 #header {
   position: absolute;
   top: 0px;
@@ -93,7 +98,7 @@ body {
   border-bottom: 1px solid #b7e1f5;
 }
 
-/* line 24, ../sass/style.sass */
+/* line 27, ../sass/style.sass */
 #above-the-fold {
   margin: auto;
   width: 700px;
@@ -102,7 +107,7 @@ body {
   position: relative;
 }
 
-/* line 31, ../sass/style.sass */
+/* line 34, ../sass/style.sass */
 .wrap {
   -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 0 80px inset;
   -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 0 80px inset;
@@ -112,7 +117,7 @@ body {
   background-image: url('/images/grid.png?1326628386');
 }
 
-/* line 36, ../sass/style.sass */
+/* line 39, ../sass/style.sass */
 #below-the-fold {
   margin: auto;
   width: 100%;
@@ -122,7 +127,7 @@ body {
   color: white;
 }
 
-/* line 44, ../sass/style.sass */
+/* line 47, ../sass/style.sass */
 #history {
   padding: 30px;
   width: 35%;
@@ -130,20 +135,20 @@ body {
   float: left;
 }
 
-/* line 50, ../sass/style.sass */
+/* line 53, ../sass/style.sass */
 #stats {
   padding: 30px;
   width: 35%;
   float: left;
 }
 
-/* line 58, ../sass/style.sass */
+/* line 61, ../sass/style.sass */
 #task-list {
   margin: auto;
   text-align: center;
 }
 
-/* line 63, ../sass/style.sass */
+/* line 66, ../sass/style.sass */
 #prompt {
   font-size: 60px;
   font-family: "Montserrat", sans-serif;
@@ -156,7 +161,7 @@ body {
   text-shadow: rgba(255, 255, 255, 0.5) 0px 1px 0px, rgba(0, 0, 0, 0.5) 0px -1px 0px;
 }
 
-/* line 75, ../sass/style.sass */
+/* line 78, ../sass/style.sass */
 #control-surface {
   width: 700px;
   margin: auto;
@@ -165,7 +170,7 @@ body {
   position: relative;
 }
 
-/* line 82, ../sass/style.sass */
+/* line 85, ../sass/style.sass */
 #slide-holder {
   height: 300px;
   width: 2800px;
@@ -173,7 +178,7 @@ body {
   top: 0px;
   left: 0px;
 }
-/* line 88, ../sass/style.sass */
+/* line 91, ../sass/style.sass */
 #slide-holder .slide {
   width: 700px;
   float: left;
@@ -182,7 +187,7 @@ body {
   position: relative;
 }
 
-/* line 95, ../sass/style.sass */
+/* line 98, ../sass/style.sass */
 #thedoing {
   font-size: 40px;
   text-transform: lowercase;
@@ -222,7 +227,7 @@ body {
   width: 450px;
 }
 
-/* line 109, ../sass/style.sass */
+/* line 112, ../sass/style.sass */
 ul#history-list li {
   list-style: none;
   font-family: Georgia, serif;
@@ -230,7 +235,7 @@ ul#history-list li {
   line-height: 24px;
   text-align: center;
 }
-/* line 115, ../sass/style.sass */
+/* line 118, ../sass/style.sass */
 ul#history-list li .history-date {
   font-size: 10px;
   line-height: 24px;
@@ -239,13 +244,13 @@ ul#history-list li .history-date {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-/* line 122, ../sass/style.sass */
+/* line 125, ../sass/style.sass */
 .time {
   font-family: Georgia, serif;
   font-weight: normal;
 }
 
-/* line 126, ../sass/style.sass */
+/* line 129, ../sass/style.sass */
 h2 {
   font-family: Georgia, sans-serif;
   font-style: italic;
@@ -253,7 +258,7 @@ h2 {
   margin-bottom: 20px;
 }
 
-/* line 132, ../sass/style.sass */
+/* line 135, ../sass/style.sass */
 h3 {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
@@ -265,7 +270,7 @@ h3 {
   text-transform: uppercase;
 }
 
-/* line 142, ../sass/style.sass */
+/* line 145, ../sass/style.sass */
 h4 {
   font-size: 12px;
   font-family: "Montserrat", sans-serif;
@@ -277,7 +282,7 @@ h4 {
   text-transform: uppercase;
 }
 
-/* line 152, ../sass/style.sass */
+/* line 155, ../sass/style.sass */
 h5 {
   font-family: Georgia, sans-serif;
   font-style: normal;
@@ -286,7 +291,7 @@ h5 {
   margin-top: 10px;
 }
 
-/* line 159, ../sass/style.sass */
+/* line 162, ../sass/style.sass */
 h6 {
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
@@ -299,7 +304,7 @@ h6 {
   margin-bottom: 10px;
 }
 
-/* line 170, ../sass/style.sass */
+/* line 173, ../sass/style.sass */
 #logo {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
@@ -313,7 +318,7 @@ h6 {
   float: left;
 }
 
-/* line 182, ../sass/style.sass */
+/* line 185, ../sass/style.sass */
 #welcome {
   float: right;
   font-family: Georgia, serif;
@@ -326,19 +331,19 @@ h6 {
   margin-right: 15px;
 }
 
-/* line 193, ../sass/style.sass */
+/* line 196, ../sass/style.sass */
 .clear {
   clear: both;
 }
 
-/* line 197, ../sass/style.sass */
+/* line 200, ../sass/style.sass */
 #time-stats {
   float: left;
   width: 360px;
   margin-right: 60px;
 }
 
-/* line 202, ../sass/style.sass */
+/* line 205, ../sass/style.sass */
 #time-remaining {
   font-family: Georgia, serif;
   font-size: 140px;
@@ -347,25 +352,25 @@ h6 {
   margin-bottom: 50px;
 }
 
-/* line 209, ../sass/style.sass */
+/* line 212, ../sass/style.sass */
 #midtask-options {
   float: right;
   width: 235px;
 }
 
-/* line 213, ../sass/style.sass */
+/* line 216, ../sass/style.sass */
 #time-stats-left {
   float: left;
   width: 140px;
 }
 
-/* line 217, ../sass/style.sass */
+/* line 220, ../sass/style.sass */
 #time-stats-right {
   float: right;
   width: 140px;
 }
 
-/* line 222, ../sass/style.sass */
+/* line 225, ../sass/style.sass */
 button {
   display: inline-block;
   margin: 0 2px;
@@ -382,29 +387,29 @@ button {
   -ms-border-radius: 0.5em;
   -khtml-border-radius: 0.5em;
   border-radius: 0.5em;
-  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px;
-  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.4) 0 1px 2px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0 1px 2px;
+  -o-box-shadow: rgba(0, 0, 0, 0.4) 0 1px 2px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0 1px 2px;
 }
 
-/* line 236, ../sass/style.sass */
+/* line 239, ../sass/style.sass */
 button:hover, input[type="submit"].button:hover {
   text-decoration: none;
 }
 
-/* line 239, ../sass/style.sass */
+/* line 242, ../sass/style.sass */
 button:active, input[type="submit"].button:active {
   position: relative;
   top: 1px;
 }
 
-/* line 243, ../sass/style.sass */
+/* line 246, ../sass/style.sass */
 .small {
   font-size: 12px;
 }
 
-/* line 246, ../sass/style.sass */
+/* line 249, ../sass/style.sass */
 .set-time-button {
   font-size: 25px;
   font-weight: bold;
@@ -439,7 +444,7 @@ button:active, input[type="submit"].button:active {
   width: 120px;
 }
 
-/* line 257, ../sass/style.sass */
+/* line 260, ../sass/style.sass */
 #minutes {
   position: absolute;
   left: 50%;
@@ -449,7 +454,7 @@ button:active, input[type="submit"].button:active {
   z-index: 4;
 }
 
-/* line 265, ../sass/style.sass */
+/* line 268, ../sass/style.sass */
 #time-muncher {
   font-size: 80px;
   -moz-border-radius: 150px;
@@ -471,7 +476,7 @@ button:active, input[type="submit"].button:active {
   z-index: 3;
 }
 
-/* line 280, ../sass/style.sass */
+/* line 283, ../sass/style.sass */
 .time-minus-button {
   font-size: 25px;
   font-weight: bold;
@@ -509,7 +514,7 @@ button:active, input[type="submit"].button:active {
   z-index: 2;
 }
 
-/* line 294, ../sass/style.sass */
+/* line 297, ../sass/style.sass */
 .time-plus-button {
   font-size: 25px;
   font-weight: bold;
@@ -547,7 +552,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 308, ../sass/style.sass */
+/* line 311, ../sass/style.sass */
 .set-name-button {
   font-weight: bold;
   position: absolute;
@@ -558,7 +563,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 317, ../sass/style.sass */
+/* line 320, ../sass/style.sass */
 .midtask {
   width: 230px;
   margin: 15px auto;
@@ -566,7 +571,7 @@ button:active, input[type="submit"].button:active {
   line-height: 31px;
 }
 
-/* line 323, ../sass/style.sass */
+/* line 326, ../sass/style.sass */
 .logout {
   font-size: 8px;
   text-transform: uppercase;
@@ -575,7 +580,7 @@ button:active, input[type="submit"].button:active {
   margin-left: 3px;
 }
 
-/* line 331, ../sass/style.sass */
+/* line 334, ../sass/style.sass */
 .white {
   color: #333333;
   text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0px;
@@ -588,7 +593,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ffffff, #dddddd);
 }
 
-/* line 337, ../sass/style.sass */
+/* line 340, ../sass/style.sass */
 .white:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ededed), color-stop(100%, #ededed));
   background-image: -webkit-linear-gradient(#ededed, #ededed);
@@ -598,7 +603,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ededed, #ededed);
 }
 
-/* line 340, ../sass/style.sass */
+/* line 343, ../sass/style.sass */
 .white:active {
   color: #999999;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dddddd), color-stop(100%, #ffffff));
@@ -607,4 +612,107 @@ button:active, input[type="submit"].button:active {
   background-image: -o-linear-gradient(#dddddd, #ffffff);
   background-image: -ms-linear-gradient(#dddddd, #ffffff);
   background-image: linear-gradient(#dddddd, #ffffff);
+}
+
+/* line 347, ../sass/style.sass */
+#overlay {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: rgba(0, 0, 0, 0.5) 0 0 200px inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0 0 200px inset;
+  -o-box-shadow: rgba(0, 0, 0, 0.5) 0 0 200px inset;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 0 200px inset;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  display: none;
+}
+/* line 355, ../sass/style.sass */
+#overlay #overlay-wrap {
+  width: 600px;
+  position: relative;
+  height: 300px;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -300px;
+}
+/* line 363, ../sass/style.sass */
+#overlay h1 {
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
+  font-size: 60px;
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: -2px;
+  text-align: center;
+  text-transform: lowercase;
+}
+/* line 371, ../sass/style.sass */
+#overlay h2 {
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+/* line 376, ../sass/style.sass */
+#overlay .overlay-yes {
+  font-size: 50px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -khtml-border-radius: 10px;
+  border-radius: 10px;
+  margin-right: 20px;
+  text-shadow: rgba(255, 255, 255, 0.8) 0 2px 0px;
+  line-height: 150px;
+  float: left;
+  height: 200px;
+  width: 200px;
+}
+/* line 385, ../sass/style.sass */
+#overlay .overlay-no-top {
+  font-size: 50px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -khtml-border-radius: 10px;
+  border-radius: 10px;
+  text-shadow: rgba(255, 255, 255, 0.8) 0 2px 0px;
+  line-height: 90px;
+  float: left;
+  height: 90px;
+  padding: 0 0 0 20px;
+  margin: 0 0 20px 0;
+  width: 355px;
+  text-align: left;
+}
+/* line 396, ../sass/style.sass */
+#overlay .overlay-no-top span {
+  font-size: 17px;
+  line-height: 90px;
+}
+/* line 399, ../sass/style.sass */
+#overlay .overlay-no-bottom {
+  font-size: 50px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -khtml-border-radius: 10px;
+  border-radius: 10px;
+  text-shadow: rgba(255, 255, 255, 0.8) 0 2px 0px;
+  line-height: 90px;
+  float: left;
+  height: 90px;
+  padding: 0 0 0 20px;
+  width: 355px;
+  text-align: left;
+}
+/* line 409, ../sass/style.sass */
+#overlay .overlay-no-bottom span {
+  font-size: 17px;
+  line-height: 90px;
+  height: 90px;
 }
