--- a/sass/style.sass
+++ b/sass/style.sass
@@ -45,13 +45,13 @@ input
 	color: white
 	
 #history
-	padding: 30px
+	padding: 20px 30px
 	width: 35%
 	margin-right: 20%
 	float: left
 	
 #stats
-	padding: 30px
+	padding: 20px 30px
 	width: 35%
 	float: left
 	
