--- a/sass/style.sass
+++ b/sass/style.sass
@@ -58,7 +58,8 @@ body
 #task-list
 	margin: auto
 	text-align: center
-	
+	font-family: 'Montserrat', sans-serif
+	font-size: 16px
 
 #prompt
 	font-size: 60px
