--- a/sass/style.sass
+++ b/sass/style.sass
@@ -61,7 +61,8 @@ input
 #task-list
 	margin: auto
 	text-align: center
-	
+	font-family: 'Montserrat', sans-serif
+	font-size: 16px
 
 #prompt
 	font-size: 60px
