--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ input {
 /* line 27, ../sass/style.sass */
 #above-the-fold {
   margin: auto;
-  width: 700px;
+  width: 90%;
   height: 1000px;
   overflow: hidden;
   position: relative;
@@ -123,32 +123,36 @@ input {
   width: 100%;
   background-color: #156489;
   border-top: 3px solid #0d5577;
-  height: 500px;
   color: white;
 }
 
-/* line 47, ../sass/style.sass */
+/* line 46, ../sass/style.sass */
 #history {
-  padding: 20px 30px;
-  width: 35%;
-  margin-right: 20%;
+  padding: 20px 0 20px 5%;
+  width: 40%;
   float: left;
 }
 
-/* line 53, ../sass/style.sass */
+/* line 51, ../sass/style.sass */
 #stats {
-  padding: 20px 30px;
-  width: 35%;
-  float: left;
+  padding: 20px 5% 20px 0;
+  width: 40%;
+  float: right;
 }
 
-/* line 61, ../sass/style.sass */
+/* line 59, ../sass/style.sass */
 #task-list {
   margin: auto;
+}
+/* line 61, ../sass/style.sass */
+#task-list li {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  margin-bottom: 3px;
   text-align: center;
 }
 
-/* line 66, ../sass/style.sass */
+/* line 67, ../sass/style.sass */
 #prompt {
   font-size: 60px;
   font-family: "Montserrat", sans-serif;
@@ -161,7 +165,7 @@ input {
   text-shadow: rgba(255, 255, 255, 0.5) 0px 1px 0px, rgba(0, 0, 0, 0.5) 0px -1px 0px;
 }
 
-/* line 78, ../sass/style.sass */
+/* line 79, ../sass/style.sass */
 #control-surface {
   width: 700px;
   margin: auto;
@@ -170,7 +174,7 @@ input {
   position: relative;
 }
 
-/* line 85, ../sass/style.sass */
+/* line 86, ../sass/style.sass */
 #slide-holder {
   height: 300px;
   width: 2800px;
@@ -178,7 +182,7 @@ input {
   top: 0px;
   left: 0px;
 }
-/* line 91, ../sass/style.sass */
+/* line 92, ../sass/style.sass */
 #slide-holder .slide {
   width: 700px;
   float: left;
@@ -187,35 +191,17 @@ input {
   position: relative;
 }
 
-/* line 98, ../sass/style.sass */
+/* line 99, ../sass/style.sass */
 #thedoing {
   font-size: 40px;
   text-transform: lowercase;
-  -moz-border-radius-topleft: 8px;
-  -webkit-border-top-left-radius: 8px;
-  -o-border-top-left-radius: 8px;
-  -ms-border-top-left-radius: 8px;
-  -khtml-border-top-left-radius: 8px;
-  border-top-left-radius: 8px;
-  -moz-border-radius-bottomleft: 8px;
-  -webkit-border-bottom-left-radius: 8px;
-  -o-border-bottom-left-radius: 8px;
-  -ms-border-bottom-left-radius: 8px;
-  -khtml-border-bottom-left-radius: 8px;
-  border-bottom-left-radius: 8px;
-  -moz-border-radius-topright: 0px;
-  -webkit-border-top-right-radius: 0px;
-  -o-border-top-right-radius: 0px;
-  -ms-border-top-right-radius: 0px;
-  -khtml-border-top-right-radius: 0px;
-  border-top-right-radius: 0px;
-  -moz-border-radius-bottomright: 0px;
-  -webkit-border-bottom-right-radius: 0px;
-  -o-border-bottom-right-radius: 0px;
-  -ms-border-bottom-right-radius: 0px;
-  -khtml-border-bottom-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-  padding: 15px;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -khtml-border-radius: 8px;
+  border-radius: 8px;
+  padding: 15px 120px 15px 15px;
   background: rgba(255, 255, 255, 0.8);
   border: 1px solid #53bff2;
   -moz-box-shadow: rgba(0, 0, 0, 0.6) 0 0 3px inset;
@@ -224,10 +210,16 @@ input {
   box-shadow: rgba(0, 0, 0, 0.6) 0 0 3px inset;
   color: #333333;
   float: left;
-  width: 450px;
+  width: 510px;
+  font-family: "Montserrat", sans-serif;
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  margin: 0 0 0 -315px;
+  z-index: 1;
 }
 
-/* line 112, ../sass/style.sass */
+/* line 118, ../sass/style.sass */
 ul#history-list li {
   list-style: none;
   font-family: Georgia, serif;
@@ -235,7 +227,7 @@ ul#history-list li {
   line-height: 24px;
   text-align: center;
 }
-/* line 118, ../sass/style.sass */
+/* line 124, ../sass/style.sass */
 ul#history-list li .history-date {
   font-size: 10px;
   line-height: 24px;
@@ -244,13 +236,13 @@ ul#history-list li .history-date {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-/* line 125, ../sass/style.sass */
+/* line 131, ../sass/style.sass */
 .time {
   font-family: Georgia, serif;
   font-weight: normal;
 }
 
-/* line 129, ../sass/style.sass */
+/* line 135, ../sass/style.sass */
 h2 {
   font-family: Georgia, sans-serif;
   font-style: italic;
@@ -258,7 +250,7 @@ h2 {
   margin-bottom: 20px;
 }
 
-/* line 135, ../sass/style.sass */
+/* line 141, ../sass/style.sass */
 h3 {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
@@ -270,7 +262,7 @@ h3 {
   text-transform: uppercase;
 }
 
-/* line 145, ../sass/style.sass */
+/* line 151, ../sass/style.sass */
 h4 {
   font-size: 12px;
   font-family: "Montserrat", sans-serif;
@@ -282,7 +274,7 @@ h4 {
   text-transform: uppercase;
 }
 
-/* line 155, ../sass/style.sass */
+/* line 161, ../sass/style.sass */
 h5 {
   font-family: Georgia, sans-serif;
   font-style: normal;
@@ -291,7 +283,7 @@ h5 {
   margin-top: 10px;
 }
 
-/* line 162, ../sass/style.sass */
+/* line 168, ../sass/style.sass */
 h6 {
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
@@ -304,7 +296,7 @@ h6 {
   margin-bottom: 10px;
 }
 
-/* line 173, ../sass/style.sass */
+/* line 179, ../sass/style.sass */
 #logo {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
@@ -318,7 +310,7 @@ h6 {
   float: left;
 }
 
-/* line 185, ../sass/style.sass */
+/* line 191, ../sass/style.sass */
 #welcome {
   float: right;
   font-family: Georgia, serif;
@@ -331,19 +323,53 @@ h6 {
   margin-right: 15px;
 }
 
-/* line 196, ../sass/style.sass */
+/* line 202, ../sass/style.sass */
 .clear {
   clear: both;
 }
 
-/* line 200, ../sass/style.sass */
+/* line 205, ../sass/style.sass */
+.stat {
+  font-family: Georgia, serif;
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.9) 0px -2px 0px;
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 15px;
+  margin-top: 10px;
+}
+
+/* line 214, ../sass/style.sass */
+.stat-title {
+  font-size: 9px;
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 1px;
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+}
+
+/* line 223, ../sass/style.sass */
+.stat-description {
+  font-family: Georgia, serif;
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
+  font-size: 10px;
+  font-style: italic;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+/* line 233, ../sass/style.sass */
 #time-stats {
   float: left;
   width: 360px;
   margin-right: 60px;
 }
 
-/* line 205, ../sass/style.sass */
+/* line 238, ../sass/style.sass */
 #time-remaining {
   font-family: Georgia, serif;
   font-size: 140px;
@@ -352,25 +378,25 @@ h6 {
   margin-bottom: 50px;
 }
 
-/* line 212, ../sass/style.sass */
+/* line 245, ../sass/style.sass */
 #midtask-options {
   float: right;
   width: 235px;
 }
 
-/* line 216, ../sass/style.sass */
+/* line 249, ../sass/style.sass */
 #time-stats-left {
   float: left;
   width: 140px;
 }
 
-/* line 220, ../sass/style.sass */
+/* line 253, ../sass/style.sass */
 #time-stats-right {
   float: right;
   width: 140px;
 }
 
-/* line 225, ../sass/style.sass */
+/* line 258, ../sass/style.sass */
 button {
   display: inline-block;
   margin: 0 2px;
@@ -393,40 +419,40 @@ button {
   box-shadow: rgba(0, 0, 0, 0.4) 0 1px 2px;
 }
 
-/* line 239, ../sass/style.sass */
+/* line 272, ../sass/style.sass */
 button:hover, input[type="submit"].button:hover {
   text-decoration: none;
 }
 
-/* line 242, ../sass/style.sass */
+/* line 275, ../sass/style.sass */
 button:active, input[type="submit"].button:active {
   position: relative;
   top: 1px;
 }
 
-/* line 246, ../sass/style.sass */
+/* line 279, ../sass/style.sass */
 .small {
   font-size: 12px;
 }
 
-/* line 249, ../sass/style.sass */
+/* line 282, ../sass/style.sass */
 .set-time-button {
   font-size: 25px;
   font-weight: bold;
   float: left;
   padding: 0px;
-  -moz-border-radius-topright: 1em;
-  -webkit-border-top-right-radius: 1em;
-  -o-border-top-right-radius: 1em;
-  -ms-border-top-right-radius: 1em;
-  -khtml-border-top-right-radius: 1em;
-  border-top-right-radius: 1em;
-  -moz-border-radius-bottomright: 1em;
-  -webkit-border-bottom-right-radius: 1em;
-  -o-border-bottom-right-radius: 1em;
-  -ms-border-bottom-right-radius: 1em;
-  -khtml-border-bottom-right-radius: 1em;
-  border-bottom-right-radius: 1em;
+  -moz-border-radius-topright: 8px;
+  -webkit-border-top-right-radius: 8px;
+  -o-border-top-right-radius: 8px;
+  -ms-border-top-right-radius: 8px;
+  -khtml-border-top-right-radius: 8px;
+  border-top-right-radius: 8px;
+  -moz-border-radius-bottomright: 8px;
+  -webkit-border-bottom-right-radius: 8px;
+  -o-border-bottom-right-radius: 8px;
+  -ms-border-bottom-right-radius: 8px;
+  -khtml-border-bottom-right-radius: 8px;
+  border-bottom-right-radius: 8px;
   -moz-border-radius-topleft: 0px;
   -webkit-border-top-left-radius: 0px;
   -o-border-top-left-radius: 0px;
@@ -439,12 +465,31 @@ button:active, input[type="submit"].button:active {
   -ms-border-bottom-left-radius: 0px;
   -khtml-border-bottom-left-radius: 0px;
   border-bottom-left-radius: 0px;
-  margin: 3px 0 0 -8px;
-  line-height: 75px;
+  margin: 0 0 0 220px;
+  line-height: 77px;
   width: 120px;
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  z-index: 2;
+}
+/* line 296, ../sass/style.sass */
+.set-time-button:active {
+  position: absolute;
+  top: 50px;
 }
 
-/* line 260, ../sass/style.sass */
+/* line 300, ../sass/style.sass */
+.catchphrase {
+  position: absolute;
+  width: 300px;
+  text-align: center;
+  top: 140px;
+  left: 50%;
+  margin-left: -150px;
+}
+
+/* line 308, ../sass/style.sass */
 #minutes {
   position: absolute;
   left: 50%;
@@ -454,7 +499,7 @@ button:active, input[type="submit"].button:active {
   z-index: 4;
 }
 
-/* line 268, ../sass/style.sass */
+/* line 316, ../sass/style.sass */
 #time-muncher {
   font-size: 80px;
   -moz-border-radius: 150px;
@@ -474,9 +519,20 @@ button:active, input[type="submit"].button:active {
   top: 50px;
   margin-left: -75px;
   z-index: 3;
+  border: solid 1px #f0c683;
+}
+/* line 331, ../sass/style.sass */
+#time-muncher:hover {
+  border: solid 2px #eaa12d;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #dddddd));
+  background-image: -webkit-linear-gradient(#ffffff, #dddddd);
+  background-image: -moz-linear-gradient(#ffffff, #dddddd);
+  background-image: -o-linear-gradient(#ffffff, #dddddd);
+  background-image: -ms-linear-gradient(#ffffff, #dddddd);
+  background-image: linear-gradient(#ffffff, #dddddd);
 }
 
-/* line 283, ../sass/style.sass */
+/* line 335, ../sass/style.sass */
 .time-minus-button {
   font-size: 25px;
   font-weight: bold;
@@ -514,7 +570,7 @@ button:active, input[type="submit"].button:active {
   z-index: 2;
 }
 
-/* line 297, ../sass/style.sass */
+/* line 349, ../sass/style.sass */
 .time-plus-button {
   font-size: 25px;
   font-weight: bold;
@@ -552,7 +608,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 311, ../sass/style.sass */
+/* line 363, ../sass/style.sass */
 .set-name-button {
   font-weight: bold;
   position: absolute;
@@ -563,7 +619,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 320, ../sass/style.sass */
+/* line 372, ../sass/style.sass */
 .midtask {
   width: 230px;
   margin: 15px auto;
@@ -571,7 +627,7 @@ button:active, input[type="submit"].button:active {
   line-height: 31px;
 }
 
-/* line 326, ../sass/style.sass */
+/* line 378, ../sass/style.sass */
 .logout {
   font-size: 8px;
   text-transform: uppercase;
@@ -580,7 +636,7 @@ button:active, input[type="submit"].button:active {
   margin-left: 3px;
 }
 
-/* line 334, ../sass/style.sass */
+/* line 386, ../sass/style.sass */
 .white {
   color: #333333;
   text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0px;
@@ -593,7 +649,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ffffff, #dddddd);
 }
 
-/* line 340, ../sass/style.sass */
+/* line 392, ../sass/style.sass */
 .white:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ededed), color-stop(100%, #ededed));
   background-image: -webkit-linear-gradient(#ededed, #ededed);
@@ -603,7 +659,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ededed, #ededed);
 }
 
-/* line 343, ../sass/style.sass */
+/* line 395, ../sass/style.sass */
 .white:active {
   color: #999999;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dddddd), color-stop(100%, #ffffff));
@@ -614,7 +670,41 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#dddddd, #ffffff);
 }
 
-/* line 347, ../sass/style.sass */
+/* line 399, ../sass/style.sass */
+.orange {
+  color: #333333;
+  text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0px;
+  border: solid 1px #b7b7b7;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #f0c683));
+  background-image: -webkit-linear-gradient(#ffffff, #f0c683);
+  background-image: -moz-linear-gradient(#ffffff, #f0c683);
+  background-image: -o-linear-gradient(#ffffff, #f0c683);
+  background-image: -ms-linear-gradient(#ffffff, #f0c683);
+  background-image: linear-gradient(#ffffff, #f0c683);
+}
+
+/* line 405, ../sass/style.sass */
+.orange:hover {
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f0c683), color-stop(100%, #f0c683));
+  background-image: -webkit-linear-gradient(#f0c683, #f0c683);
+  background-image: -moz-linear-gradient(#f0c683, #f0c683);
+  background-image: -o-linear-gradient(#f0c683, #f0c683);
+  background-image: -ms-linear-gradient(#f0c683, #f0c683);
+  background-image: linear-gradient(#f0c683, #f0c683);
+}
+
+/* line 408, ../sass/style.sass */
+.orange:active {
+  color: #999999;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f0c683), color-stop(100%, #ffffff));
+  background-image: -webkit-linear-gradient(#f0c683, #ffffff);
+  background-image: -moz-linear-gradient(#f0c683, #ffffff);
+  background-image: -o-linear-gradient(#f0c683, #ffffff);
+  background-image: -ms-linear-gradient(#f0c683, #ffffff);
+  background-image: linear-gradient(#f0c683, #ffffff);
+}
+
+/* line 412, ../sass/style.sass */
 #overlay {
   position: fixed;
   background: rgba(0, 0, 0, 0.8);
@@ -627,17 +717,17 @@ button:active, input[type="submit"].button:active {
   z-index: 100;
   display: none;
 }
-/* line 355, ../sass/style.sass */
+/* line 420, ../sass/style.sass */
 #overlay #overlay-wrap {
   width: 600px;
   position: relative;
-  height: 300px;
+  height: 500px;
   top: 50%;
   left: 50%;
-  margin-top: -150px;
+  margin-top: -250px;
   margin-left: -300px;
 }
-/* line 363, ../sass/style.sass */
+/* line 428, ../sass/style.sass */
 #overlay h1 {
   color: white;
   text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
@@ -646,15 +736,16 @@ button:active, input[type="submit"].button:active {
   letter-spacing: -2px;
   text-align: center;
   text-transform: lowercase;
+  margin-bottom: 30px;
 }
-/* line 371, ../sass/style.sass */
+/* line 437, ../sass/style.sass */
 #overlay h2 {
   color: white;
   text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
   text-align: center;
   margin-bottom: 40px;
 }
-/* line 376, ../sass/style.sass */
+/* line 442, ../sass/style.sass */
 #overlay .overlay-yes {
   font-size: 50px;
   -moz-border-radius: 10px;
@@ -670,7 +761,7 @@ button:active, input[type="submit"].button:active {
   height: 200px;
   width: 200px;
 }
-/* line 385, ../sass/style.sass */
+/* line 451, ../sass/style.sass */
 #overlay .overlay-no-top {
   font-size: 50px;
   -moz-border-radius: 10px;
@@ -688,12 +779,12 @@ button:active, input[type="submit"].button:active {
   width: 355px;
   text-align: left;
 }
-/* line 396, ../sass/style.sass */
+/* line 462, ../sass/style.sass */
 #overlay .overlay-no-top span {
   font-size: 17px;
   line-height: 90px;
 }
-/* line 399, ../sass/style.sass */
+/* line 465, ../sass/style.sass */
 #overlay .overlay-no-bottom {
   font-size: 50px;
   -moz-border-radius: 10px;
@@ -710,7 +801,7 @@ button:active, input[type="submit"].button:active {
   width: 355px;
   text-align: left;
 }
-/* line 409, ../sass/style.sass */
+/* line 475, ../sass/style.sass */
 #overlay .overlay-no-bottom span {
   font-size: 17px;
   line-height: 90px;
